# app/Models/Ticketdistribution.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Ticketdistribution extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'user_id',
+        'ticket_id',
+        'quantite_attribue',
+        'quantite_vendue', 
+        'quantite_restante',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function ticket()
+    {
+        return $this->belongsTo(Ticket::class, 'ticket_id');
+    }
+
+    public function ticketinstances()
+    {
+        return $this->hasMany(Ticketinstance::class);
+    }
+}
